# flipkart_product_recommender

./: README.md  app.py  pyproject.toml
flipkart_product_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
grafana/: grafana-deployment.yaml
prometheus/: prometheus-configmap.yaml  prometheus-deployment.yaml
