[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flipkart-product-recommender"
version = "0.1.0"
description = "A product recommender system for Flipkart"
authors = [
    { name = "Venkatesh Pabbati" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain",
    "langchain-astradb",
    "langchain-huggingface",
    "langchain-groq",
    "langchain-community",
    "datasets",
    "pypdf",
    "python-dotenv",
    "pandas",
    "flask",
    "prometheus_client"
]

[tool.setuptools.packages.find]
where = ["."]
